# AlgorithmsCollection

./: CMakeLists.txt  README.md  TestAlgorithms.cpp  playground.bat
Algorithms/: HelloWorld.cpp  LongestPalindrome.cpp  MajorityElement.cpp  SlidingWindowMaximum.cpp  TheSumOfThreeNumbers.cpp  ThreeNumbersSumToZero.cpp
Documents/: Hoshi-Inori's Algorithms Document Library.md
Documents/.obsidian/: workspace.json
Documents/AlgorithmsDocuments/: Hoshi-Inori's Algorithms Document Library.md
Documents/AlgorithmsDocuments/.obsidian/: workspace.json
Documents/Comprehensive/: Sliding Window Maximum.md  Three Numbers Sum to Zero.md
Documents/Maths/: Majority Element.md
Documents/String/: Longest Palindrome.md  Manacher's Algorithm.md
Documents/Templates/: AlgorithmTemplate.md
Interfaces/: ISolution.h
Utilities/: IOHelper.h
